# york

./: .gitignore  README.md  bun.lockb  package-lock.json  package.json
src/app/: layout.tsx
src/app/editor/: page.tsx
src/app/pivot/: page.tsx
src/components/providers/: IdProvider.tsx
src/components/ui/: button.tsx  color-picker.tsx  command.tsx  dialog.tsx  input.tsx  radio-group.tsx  spinner.tsx
src/features/pivot-table/: README.md  index.tsx
src/features/pivot-table/module/: Cargo.toml  build.sh  wasm-interface.ts
src/features/pivot-table/module/src/: lib.rs
src/features/wasm-html-builder/: index.tsx
src/features/wasm-html-builder/components/: Canvas.tsx  Controls.tsx  ErrorBoundary.tsx  GridOverlay.tsx  Guidelines.tsx  Header.tsx  Paper.tsx  PaperControls.tsx  PerformanceOverlay.tsx  Ruler.tsx  SpacingGuides.tsx  SpatialIndexingOverlay.tsx  TemplateManager.tsx  ViewportCullingOverlay.tsx
src/features/wasm-html-builder/hooks/: index.ts  useCopyPaste.ts  useElementPooling.ts  useGuidelines.ts  useLightweightOptimization.ts  useLineDrag.ts  useOptimizedWasmActions.ts  usePaperManager.ts  usePerformanceOptimization.ts  useRuler.ts  useTemplateManager.ts  useUndoRedo.ts  (+6 more)
src/features/wasm-html-builder/module/: BUILD.md  Cargo.toml  Dockerfile  README.md  build.bat  build.js  build.ps1  build.sh  docker-compose.yml  package.json  wasm-interface.ts
src/features/wasm-html-builder/module/src/: drag.rs  element.rs  export.rs  lib.rs  paper.rs  spatial_index.rs  style_history.rs  table.rs  transform.rs  types.rs  utils.rs
src/stores/: tableStore.ts
(+56 files in other folders)
