[package]
name = "pivot-table-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
]

# Use `wee_alloc` as the global allocator.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
