[package]
name = "html-builder-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"
flate2 = "1.0"
base64 = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance", 
  "Window",
]

[profile.release]
# Optimize for speed, not size
opt-level = 3
# Enable Link Time Optimization for better performance
lto = true
# Enable codegen units for better optimization
codegen-units = 1
# Enable debug info for better error messages in release
debug = true
# Enable panic = "abort" for smaller binary
panic = "abort"
